<resources>
    <string name="app_name">MBM</string>
    <string name="title_activity_survival_text">SurvivalText</string>

    <!--Important numbers strings -->
    <string name="numbers_emergency_services">Hitne službe</string>
    <string name="numbers_mobile_operators">Mobilna telefonija</string>
    <string name="numbers_health_care">Zdravstvo</string>

    <string name="number_police">192</string>
    <string name="number_firefighters">193</string>
    <string name="number_emergency">194</string>
    <string name="number_mountain_service">112</string>

    <string name="button_all_numbers">Svi brojevi</string>
    <string name="button_serbia">Srbija</string>
    <string name="button_select_city">Izaberite grad</string>

    <string name="dialog_title_choose_city">Odaberite grad</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nesto">Nesto</string>

    <!--dialog-->
    <string name="dialog_title_sos">SOS slanje poruke</string>

    <string name="location_text">Poslednja poznata lokacija korisnika bila je: </string>
    <string name="make_profile_first">Napravite prvo profile a zatim odaberite profile</string>

    <!--profiles-->
    <string name="edit_succeed">Uspešna izmena profila</string>
    <string name="edit_failed">Neuspešna izmena profila</string>
    <string name="create_succeed">Uspešno kreiran profil</string>
    <string name="create_failed">Neuspešno kreiran profil</string>
    <string name="valid_email">Unesite validnu email adresu</string>
    <string name="char1to30">Od 1 do najviše 30 karaktera</string>

    <!-- Weather conditions label strings -->
    <string name="temperature_with_degree" translatable="false">%s\u00B0</string>
    <string name="wind_label">Vetar: %1$s %2$s</string>
    <string name="rain_label">Rain: %1$s %2$s</string>
    <string name="snow_label">Snow: %1$s %2$s</string>
    <string name="humidity_label">Vlažnost: %1$s%2$s</string>
    <string name="pressure_label">Pritisak: %1$s %2$s</string>
    <string name="cloudiness_label">Oblačnost: %1$s%2$s</string>
    <string name="last_update_label">Ažurirano: %s</string>
    <string name="sunrise_label">Svitanje: %s</string>
    <string name="sunset_label">Zalazak sunca: %s</string>
    <string name="temperature_morning_title">Morning</string>
    <string name="temperature_day_title">Day</string>
    <string name="temperature_evening_title">Evening</string>
    <string name="temperature_night_title">Night</string>
    <string name="temperature_and_scale_label" translatable="false">%1$s%2$s</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_wind">Wind</string>
    <string name="label_rain">Rain</string>
    <string name="label_snow">Snow</string>

    <!-- Weather icons -->
    <string name="icon_clear_sky_day" translatable="false">&#xf00d;</string>
    <string name="icon_clear_sky_night" translatable="false">&#xf02e;</string>
    <string name="icon_few_clouds_day" translatable="false">&#xf002;</string>
    <string name="icon_few_clouds_night" translatable="false">&#xf086;</string>
    <string name="icon_scattered_clouds" translatable="false">&#xf041;</string>
    <string name="icon_broken_clouds" translatable="false">&#xf013;</string>
    <string name="icon_shower_rain" translatable="false">&#xf01a;</string>
    <string name="icon_rain_day" translatable="false">&#xf008;</string>
    <string name="icon_rain_night" translatable="false">&#xf028;</string>
    <string name="icon_thunderstorm" translatable="false">&#xf01e;</string>
    <string name="icon_snow" translatable="false">&#xf01b;</string>
    <string name="icon_mist" translatable="false">&#xf014;</string>
    <string name="icon_weather_default" translatable="false">&#xf075;</string>
    <string name="icon_wind" translatable="false">&#xf050;</string>
    <string name="icon_humidity" translatable="false">&#xf07a;</string>
    <string name="icon_barometer" translatable="false">&#xf079;</string>
    <string name="icon_cloudiness" translatable="false">&#xf002;</string>
    <string name="icon_sunrise" translatable="false">&#xf051;</string>
    <string name="icon_sunset" translatable="false">&#xf052;</string>

    <!-- Units and Measurement-->
    <string name="percent_sign" translatable="false">\u0025</string>

    <!-- Toast messages -->
    <string name="connection_not_found">Proverite svoju internet konekciju</string>

    <!-- Toolbar weather menu -->
    <string name="toolbar_menu_refresh">Ažuriraj</string>
    <string name="toolbar_menu_search_city">Unesite ime grada</string>
    <string name="toolbar_menu_detect_location">Detektuj lokaciju</string>

    <!-- Activity names -->
    <string name="title_activity_search">Unesite ime grada</string>

    <!--    Dozvole    -->
    <string name="permission_rationale_location">Pristup lokaciji je neophodan kako bi mogli da vidite gde se trenutno nalazite.</string>
    <string name="location_permission_denied">Pristup lokaciji je neophodan kako bi mogli da vidite gde se trenutno nalazite.</string>
    <string name="permission_required_toast">Pristup lokaciji je neophodan kako bi mogli da vidite gde se trenutno nalazite.</string>
</resources>
