<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_important_numbers"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_color">

    <!-- Load the toolbar here -->
    <include
        layout="@layout/toolbar_main"
        android:id="@+id/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tools">

        <Button
            android:id="@+id/button_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_select_city"
            android:background="@drawable/button"
            android:textColor="@color/color_white"

            />

        <Button
            android:id="@+id/button_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_serbia"
            android:background="@drawable/button"
            android:textColor="@color/color_white"/>

        <Button
            android:id="@+id/button_all_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_all_numbers"
            android:background="@drawable/button"
            android:textColor="@color/color_white"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttons"
        android:layout_centerInParent="true"
        android:layout_marginTop="70sp">

        <Button
            android:id="@+id/button_emergency"
            android:layout_width="160sp"
            android:layout_height="80sp"
            android:textSize="@dimen/font_huge"
            android:text="@string/number_emergency"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="5sp"
            android:paddingLeft="25sp"
           />

        <Button
            android:id="@+id/button_police"
            android:layout_width="160sp"
            android:layout_height="80sp"
            android:layout_toRightOf="@+id/button_emergency"
            android:textSize="@dimen/font_huge"
            android:text="@string/number_police"
            android:paddingLeft="25sp"/>

        <Button
            android:id="@+id/button_firefighers"
            android:layout_width="160sp"
            android:layout_height="80sp"
            android:layout_below="@+id/button_emergency"
            android:textSize="@dimen/font_huge"
            android:text="@string/number_firefighters"
            android:paddingLeft="25sp"/>

        <Button
            android:id="@+id/button_mountain_rescue_service"
            android:layout_width="160sp"
            android:layout_height="80sp"
            android:layout_toRightOf="@+id/button_emergency"
            android:layout_below="@+id/button_emergency"
            android:textSize="@dimen/font_huge"
            android:text="@string/number_mountain_service"
            android:paddingLeft="25sp"/>


    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_search"
        android:scrollbars="vertical"
        android:layout_below="@+id/tools"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="18dp"
        android:layout_width="match_parent"
        android:background="@color/color_yellow_medium"
        android:visibility="gone"
        android:layout_height="300dp" />


</RelativeLayout>